--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.3",
     "json-server": "^1.0.0-beta.1",
