changes to host on git

--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 # Login
 
-VITE_LOGIN = "http://testapi.cognospheredynamics.com/api/loginUser"
+VITE_LOGIN = "testapi.cognospheredynamics.com/api/loginUser"
 
 # Logout
-VITE_LOGOUT = "http://testapi.cognospheredynamics.com/api/logoutUser"
+VITE_LOGOUT = "testapi.cognospheredynamics.com/api/logoutUser"
 
 # Image Storage 
 
-VITE_IMAGE = "http://testapi.cognospheredynamics.com/storage"
+VITE_IMAGE = "testapi.cognospheredynamics.com/storage"
 
 # categories
 
-VITE_CATEGORIES = "http://testapi.cognospheredynamics.com/api/v1/users/get-all/category"
-VITE_SINGLE_CATEGORY = "http://testapi.cognospheredynamics.com/api/v1/users/get/category"
+VITE_CATEGORIES = "testapi.cognospheredynamics.com/api/v1/users/get-all/category"
+VITE_SINGLE_CATEGORY = "testapi.cognospheredynamics.com/api/v1/users/get/category"
 
 # products
 
-VITE_PRODUCTS = "http://testapi.cognospheredynamics.com/api/v1/users/get-all/product"
+VITE_PRODUCTS = "testapi.cognospheredynamics.com/api/v1/users/get-all/product"
 
 
