change in the login code ,toggleing dashboard through layout.js

--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 # Login
 
-VITE_LOGIN = "testapi.cognospheredynamics.com/api/loginUser"
+VITE_LOGIN = "https://testapi.pearlbuddy.com/api/loginUser"
 
 # Logout
-VITE_LOGOUT = "testapi.cognospheredynamics.com/api/logoutUser"
+VITE_LOGOUT = "https://testapi.pearlbuddy.com/api/logoutUser"
 
 # Image Storage 
 
-VITE_IMAGE = "testapi.cognospheredynamics.com/storage"
+VITE_IMAGE = "https://testapi.pearlbuddy.com/storage"
 
 # categories
 
-VITE_CATEGORIES = "testapi.cognospheredynamics.com/api/v1/users/get-all/category"
-VITE_SINGLE_CATEGORY = "testapi.cognospheredynamics.com/api/v1/users/get/category"
+VITE_CATEGORIES = "https://testapi.pearlbuddy.com/api/v1/users/get-all/category"
+VITE_SINGLE_CATEGORY = "https://testapi.pearlbuddy.com/api/v1/users/get/category"
 
 # products
 
-VITE_PRODUCTS = "testapi.cognospheredynamics.com/api/v1/users/get-all/product"
+VITE_PRODUCTS = "https://testapi.pearlbuddy.com/api/v1/users/get-all/product"
 
 
