--- a/.env
+++ b/.env
@@ -18,4 +18,6 @@ VITE_SINGLE_CATEGORY = "https://testapi.pearlbuddy.com/api/v1/users/get/category
 
 VITE_PRODUCTS = "https://testapi.pearlbuddy.com/api/v1/users/get-all/product"
 
+VITE_CONFIRM_ORDER = "https://testapi.pearlbuddy.com/api/v1/user/post-all/user/cartdata"
+
 
